Created the countdown timer and made the shoe cards clickable

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                 <h2>Big Sale - 20% Off</h2>
                 <div class="countdown__timer">
                     <div class="timer__item">
-                        <div>03</div>
+                        <div id="days">03</div>
                         <label>Day</label>
                     </div>
                     <div class="timer__item">
-                        <div>03</div>
+                        <div id="hours">03</div>
                         <label>Hour</label>
                     </div>
                     <div class="timer__item">
-                        <div>03</div>
+                        <div id="minutes">03</div>
                         <label>Minute</label>
                     </div>
                     <div class="timer__item">
-                        <div>03</div>
+                        <div id="seconds">03</div>
                         <label>Second</label>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <p class="price">$255.95</p>
                 </div>
                 <div class="shoe__card">
-                    <img src="./images/shoe-1.png" alt="">
+                    <img src="./images/shoe-3.png" alt="">
                     <h4>Nike Air Max</h4>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
