--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Nike</title>
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <picture>
                 <img src="./images/nike.png" alt="Nike logo">
             </picture>
-            <nav>
+            <nav id="nav">
                 <a href="#">Men</a>
                 <a href="#">Women</a>
                 <a href="#">Kids</a>
@@ -26,6 +27,7 @@
                     <i class="fa-solid fa-bag-shopping"></i>
                 </button>
             </nav>
+            <i class="fa-solid fa-bars"></i>
         </header>
         <section class="hero__section">
             <div class="hero__column content">
