Changed the logo and favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/nike-favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <title>My Nikes</title>
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +15,7 @@
     <main>
         <header>
             <picture>
-                <img src="./images/nike.png" alt="Nike logo">
+                <img src="./images/logo.png" alt="Nike logo">
             </picture>
             <nav id="nav">
                 <a href="#">Men</a>
